--- a/hw4/hw4/HW4_colab.ipynb
+++ b/hw4/hw4/HW4_colab.ipynb
@@ -266,30 +266,30 @@
         "colab": {}
       },
       "source": [
-        "# DO NOT MODIFY\n",
+        "# # DO NOT MODIFY\n",
         "\n",
-        "train_path = '/content/gdrive/My Drive/NLP/hw4/data/toy_reverse/train/data.txt'\n",
-        "dev_path = '/content/gdrive/My Drive/NLP/hw4/data/toy_reverse/dev/data.txt'\n",
+        "# train_path = '/content/gdrive/My Drive/NLP/hw4/data/toy_reverse/train/data.txt'\n",
+        "# dev_path = '/content/gdrive/My Drive/NLP/hw4/data/toy_reverse/dev/data.txt'\n",
         "\n",
-        "src = torchtext.data.Field(\n",
-        "    batch_first=True, \n",
-        "    include_lengths=True\n",
-        "    )\n",
-        "tgt = torchtext.data.Field(\n",
-        "    batch_first=True, \n",
-        "    preprocessing = lambda seq: [SOS_TOKEN] + seq + [EOS_TOKEN]\n",
-        "    )\n",
+        "# src = torchtext.data.Field(\n",
+        "#     batch_first=True, \n",
+        "#     include_lengths=True\n",
+        "#     )\n",
+        "# tgt = torchtext.data.Field(\n",
+        "#     batch_first=True, \n",
+        "#     preprocessing = lambda seq: [SOS_TOKEN] + seq + [EOS_TOKEN]\n",
+        "#     )\n",
         "\n",
-        "data_train = torchtext.data.TabularDataset(\n",
-        "        path=train_path, format='tsv',\n",
-        "        fields=[('src', src), ('tgt', tgt)],\n",
-        "        filter_pred=len_filter\n",
-        "    )\n",
-        "data_dev = torchtext.data.TabularDataset(\n",
-        "        path=dev_path, format='tsv',\n",
-        "        fields=[('src', src), ('tgt', tgt)],\n",
-        "        filter_pred=len_filter\n",
-        "    )"
+        "# data_train = torchtext.data.TabularDataset(\n",
+        "#         path=train_path, format='tsv',\n",
+        "#         fields=[('src', src), ('tgt', tgt)],\n",
+        "#         filter_pred=len_filter\n",
+        "#     )\n",
+        "# data_dev = torchtext.data.TabularDataset(\n",
+        "#         path=dev_path, format='tsv',\n",
+        "#         fields=[('src', src), ('tgt', tgt)],\n",
+        "#         filter_pred=len_filter\n",
+        "#     )"
       ],
       "execution_count": 0,
       "outputs": []
@@ -809,13 +809,13 @@
         "outputId": "0a34cf64-0968-4b5a-c99a-5ba99d2a783c"
       },
       "source": [
-        "for i in range(5):\n",
-        "    item = random.choice(data_train.examples)\n",
-        "    seq = item.src\n",
-        "    print(seq)\n",
-        "    words = evaluate(encoder_loaded, decoder_loaded, seq)\n",
-        "    print(' '.join(words))\n",
-        "    print()"
+        "# for i in range(5):\n",
+        "#     item = random.choice(data_train.examples)\n",
+        "#     seq = item.src\n",
+        "#     print(seq)\n",
+        "#     words = evaluate(encoder_loaded, decoder_loaded, seq)\n",
+        "#     print(' '.join(words))\n",
+        "#     print()"
       ],
       "execution_count": 23,
       "outputs": [
