--- a/hw4/hw4/HW4_colab.ipynb
+++ b/hw4/hw4/HW4_colab.ipynb
@@ -167,7 +167,7 @@
       "metadata": {
         "id": "2D919AKbc8CN",
         "colab_type": "code",
-        "outputId": "8a9e0b65-0f85-4c28-be16-386b52306217",
+        "outputId": "f30db43a-0dc6-40b9-ab3c-f09e25024fd0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -181,7 +181,7 @@
         "mydevice = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "mydevice"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -193,7 +193,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 3
         }
       ]
     },
@@ -233,7 +233,7 @@
       "metadata": {
         "id": "iP1hNN96dUOw",
         "colab_type": "code",
-        "outputId": "e0b91421-cfad-4214-91a9-df29f45fcbb5",
+        "outputId": "e142d756-c813-484f-a1ec-d38261a50ca6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 122
@@ -360,7 +360,7 @@
       "metadata": {
         "id": "4T2As_8qc8Dl",
         "colab_type": "code",
-        "outputId": "645e6acc-9ce1-4e77-f44e-0bc37074e0a0",
+        "outputId": "414afb9f-9234-451a-b481-6db1b79d464b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 258
@@ -384,7 +384,7 @@
         "print('src:\\n', item.src)\n",
         "print('tgt:\\n', item.tgt)"
       ],
-      "execution_count": 15,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -399,9 +399,9 @@
             "\n",
             "example train data:\n",
             "src:\n",
-            " ['name[Midsummer House]', 'food[Japanese]', 'customer rating[3 out of 5]', 'near[Café Rouge]']\n",
+            " ['name[Strada]', 'priceRange[less than £20]', 'customer rating[average]', 'familyFriendly[yes]']\n",
             "tgt:\n",
-            " ['<sos>', 'Midsummer', 'House', 'is', 'a', 'Japanese', 'restaurant', 'with', 'an', 'average', 'rating', 'and', 'is', 'located', 'near', 'Café', 'Rouge.', '<eos>']\n"
+            " ['<sos>', 'Strada', 'has', 'an', 'average', 'customer', 'rating,', 'a', 'price', 'range', 'of', 'less', 'than', '£20', 'and', 'is', 'family', 'friendly.', '<eos>']\n"
           ],
           "name": "stdout"
         }
@@ -719,26 +719,49 @@
       "metadata": {
         "id": "d4yXnma6c8D-",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "60d91321-d3fc-4427-d5bf-24989bc02217"
+        "colab": {}
       },
       "source": [
         "# WRITE YOUR CODE FOR SAVING YOUR MODEL HERE\n",
         "ENCODER_PATH = '/content/gdrive/My Drive/NLP/hw4/encoder.dict'\n",
-        "DECODER_PATH = '/content/gdrive/My Drive/NLP/hw4/decoder.dict'\n",
+        "DECODER_PATH = '/content/gdrive/My Drive/NLP/hw4/decoder.dict'"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DaKIznPI4TSc",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "torch.save(encoder1.state_dict(), ENCODER_PATH)\n",
-        "torch.save(decoder1.state_dict(), DECODER_PATH)\n",
+        "torch.save(decoder1.state_dict(), DECODER_PATH)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mT9NKZTQ4QMg",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "319c5cf0-fe05-4229-8b9b-c1234c3aa9ee"
+      },
+      "source": [
         "# We encourage you to confirm that you can load your trained model here also\n",
-        "\n",
         "encoder_loaded = EncoderRNN(len(input_vocab), hidden_size).to(mydevice)\n",
         "decoder_loaded = DecoderRNN(hidden_size, len(output_vocab)).to(mydevice)\n",
         "encoder_loaded.load_state_dict(torch.load(ENCODER_PATH))\n",
         "decoder_loaded.load_state_dict(torch.load(DECODER_PATH))"
       ],
-      "execution_count": 21,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -750,7 +773,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 14
         }
       ]
     },
@@ -961,6 +984,79 @@
       "cell_type": "code",
       "metadata": {
         "id": "Ynk529psd0C7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# test with bleu library\n",
+        "# !pip install sacrebleu"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cWVXuokf4kCa",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 462
+        },
+        "outputId": "6bf38d28-0b5f-4089-cf3b-2ef11b93454b"
+      },
+      "source": [
+        "# import sacrebleu\n",
+        "# for i in range(5):\n",
+        "#     item = random.choice(data_dev.examples)\n",
+        "#     seq = item.src\n",
+        "#     print(seq)\n",
+        "#     words = evaluate(encoder_loaded, decoder_loaded, seq)\n",
+        "#     print(' '.join(words))\n",
+        "#     #print(item.tgt)\n",
+        "#     print(' '.join(item.tgt))\n",
+        "#     print(sacrebleu.raw_corpus_bleu(' '.join(words), ' '.join(item.tgt)))\n",
+        "#     print()"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['name[The Punter]', 'eatType[coffee shop]', 'food[Chinese]', 'priceRange[less than £20]', 'customer rating[low]', 'familyFriendly[yes]', 'near[Café Sicilia]']\n",
+            "<sos> The Punter is a family friendly coffee shop near The Punter has low customer ratings and is less than £20 and is <eos>\n",
+            "<sos> The Punter is a coffee shop that provides Chinese food for less than £20. It has a low customer rating and is family friendly. It is located near Café Sicilia. <eos>\n",
+            "BLEU = 17.29 75.0/34.8/13.6/9.5 (BP = 0.717 ratio = 0.750 hyp_len = 24 ref_len = 32)\n",
+            "\n",
+            "['name[Aromi]', 'eatType[coffee shop]', 'food[English]', 'customer rating[average]', 'area[riverside]', 'familyFriendly[yes]']\n",
+            "<sos> Aromi is a coffee shop that serves is in the the riverside and <eos>\n",
+            "<sos> Aromi is an average rated coffee shop that servers English food in riverside is children friendly <eos>\n",
+            "BLEU = 0.00 66.7/28.6/15.4/0.0 (BP = 0.819 ratio = 0.833 hyp_len = 15 ref_len = 18)\n",
+            "\n",
+            "['name[Taste of Cambridge]', 'eatType[coffee shop]', 'food[Chinese]', 'area[city centre]', 'familyFriendly[yes]', 'near[Crowne Plaza Hotel]']\n",
+            "<sos> Taste of Cambridge is a family-friendly coffee shop located in the city centre near Crowne Plaza Hotel <eos>\n",
+            "<sos> Taste of Cambridge is a fusion coffee shop and Chinese. It's located in the City Centre near the Crowne Plaza Hotel. Families are welcome. <eos>\n",
+            "BLEU = 26.57 78.9/50.0/29.4/18.8 (BP = 0.692 ratio = 0.731 hyp_len = 19 ref_len = 26)\n",
+            "\n",
+            "['name[The Wrestlers]', 'customer rating[low]', 'familyFriendly[yes]', 'near[The Sorrento]']\n",
+            "<sos> The Wrestlers is a family friendly restaurant that is near The The The The near It is and of the <eos>\n",
+            "<sos> The Wrestlers near The Sorrento is not recommended but at least children are welcome. <eos>\n",
+            "BLEU = 0.00 31.8/14.3/5.0/0.0 (BP = 1.000 ratio = 1.375 hyp_len = 22 ref_len = 16)\n",
+            "\n",
+            "['name[The Cricketers]', 'eatType[coffee shop]', 'food[English]', 'customer rating[5 out of 5]', 'familyFriendly[yes]', 'near[The Portland Arms]']\n",
+            "<sos> The Cricketers is a coffee shop that is near The Portland Arms Arms. It is is Portland Arms. It is rated 5 out of 5 and is family friendly. <eos>\n",
+            "<sos> Across from The Portland Arms is a family 5 star coffee shop called The Cricketers. <eos>\n",
+            "BLEU = 0.00 38.7/13.3/3.4/0.0 (BP = 1.000 ratio = 1.824 hyp_len = 31 ref_len = 17)\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nbipSc-B46Fl",
         "colab_type": "code",
         "colab": {}
       },
