--- a/hw4/hw4/HW4_colab.ipynb
+++ b/hw4/hw4/HW4_colab.ipynb
@@ -167,7 +167,7 @@
       "metadata": {
         "id": "2D919AKbc8CN",
         "colab_type": "code",
-        "outputId": "f30db43a-0dc6-40b9-ab3c-f09e25024fd0",
+        "outputId": "2cfa44b5-c852-4161-e6c2-d74fff840ee0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -233,7 +233,7 @@
       "metadata": {
         "id": "iP1hNN96dUOw",
         "colab_type": "code",
-        "outputId": "e142d756-c813-484f-a1ec-d38261a50ca6",
+        "outputId": "ac30aaae-186f-4667-d929-647b66596219",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 122
@@ -360,7 +360,7 @@
       "metadata": {
         "id": "4T2As_8qc8Dl",
         "colab_type": "code",
-        "outputId": "414afb9f-9234-451a-b481-6db1b79d464b",
+        "outputId": "addc44fa-b439-4702-e5ec-16331d9942a8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 258
@@ -384,7 +384,7 @@
         "print('src:\\n', item.src)\n",
         "print('tgt:\\n', item.tgt)"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -399,9 +399,9 @@
             "\n",
             "example train data:\n",
             "src:\n",
-            " ['name[Strada]', 'priceRange[less than £20]', 'customer rating[average]', 'familyFriendly[yes]']\n",
+            " ['name[Wildwood]', 'eatType[pub]', 'food[Italian]', 'priceRange[high]', 'customer rating[1 out of 5]']\n",
             "tgt:\n",
-            " ['<sos>', 'Strada', 'has', 'an', 'average', 'customer', 'rating,', 'a', 'price', 'range', 'of', 'less', 'than', '£20', 'and', 'is', 'family', 'friendly.', '<eos>']\n"
+            " ['<sos>', 'The', 'Italian', 'pub,', 'Wildwood,', 'has', 'a', 'high', 'price', 'range', 'and', 'a', 'customer', 'rating', 'of', '1', 'out', 'of', '5.', '<eos>']\n"
           ],
           "name": "stdout"
         }
@@ -655,10 +655,10 @@
         }
       },
       "source": [
-        "# You may modify this cell\n",
-        "# but be sure that it prints some indication of how training is progressing\n",
+        "# # You may modify this cell\n",
+        "# # but be sure that it prints some indication of how training is progressing\n",
         "\n",
-        "trainIters(encoder1, decoder1, 1, print_every=1000, teacher_forcing_ratio=0.75)"
+        "# trainIters(encoder1, decoder1, 1, print_every=1000, teacher_forcing_ratio=0.75)"
       ],
       "execution_count": 20,
       "outputs": [
@@ -737,8 +737,8 @@
         "colab": {}
       },
       "source": [
-        "torch.save(encoder1.state_dict(), ENCODER_PATH)\n",
-        "torch.save(decoder1.state_dict(), DECODER_PATH)"
+        "# torch.save(encoder1.state_dict(), ENCODER_PATH)\n",
+        "# torch.save(decoder1.state_dict(), DECODER_PATH)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -752,16 +752,16 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "319c5cf0-fe05-4229-8b9b-c1234c3aa9ee"
+        "outputId": "de3f4566-a9ac-41fc-89ef-510efdb474d3"
       },
       "source": [
         "# We encourage you to confirm that you can load your trained model here also\n",
-        "encoder_loaded = EncoderRNN(len(input_vocab), hidden_size).to(mydevice)\n",
-        "decoder_loaded = DecoderRNN(hidden_size, len(output_vocab)).to(mydevice)\n",
-        "encoder_loaded.load_state_dict(torch.load(ENCODER_PATH))\n",
-        "decoder_loaded.load_state_dict(torch.load(DECODER_PATH))"
+        "encoder = EncoderRNN(len(input_vocab), hidden_size).to(mydevice)\n",
+        "decoder = DecoderRNN(hidden_size, len(output_vocab)).to(mydevice)\n",
+        "encoder.load_state_dict(torch.load(ENCODER_PATH))\n",
+        "decoder.load_state_dict(torch.load(DECODER_PATH))"
       ],
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -773,7 +773,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 13
         }
       ]
     },
@@ -888,7 +888,225 @@
         "# WRITE YOUR CODE FOR BEAM SEARCH HERE\n",
         "\n",
         "# The output of this cell should be an example input from the dev set, \n",
-        "# and three outputs from a beam search evaluator."
+        "# and three outputs from a beam search evaluator.\n",
+        "\n",
+        "def evaluate_beam_search(encoder, decoder, sentence, max_length=MAX_LEN, beam_size=3):\n",
+        "    with torch.no_grad():\n",
+        "        input_tensor = torch.tensor([input_vocab.stoi[word] for word in sentence], device=mydevice)\n",
+        "        input_length = input_tensor.size()[0]\n",
+        "        encoder_hidden = encoder.initHidden()\n",
+        "\n",
+        "        encoder_outputs = torch.zeros(max_length, encoder.hidden_size, device=mydevice)\n",
+        "\n",
+        "        for ei in range(input_length):\n",
+        "            encoder_output, encoder_hidden = encoder(input_tensor[ei], encoder_hidden)\n",
+        "            encoder_outputs[ei] += encoder_output[0, 0]\n",
+        "\n",
+        "        decoder_input = torch.tensor([[output_vocab.stoi[SOS_TOKEN]]], device=mydevice)\n",
+        "\n",
+        "        decoder_hidden = encoder_hidden\n",
+        "\n",
+        "        beams = [] #first element is sequence, second is corresponding log likelihood.\n",
+        "        decoder_output, decoder_hidden = decoder(decoder_input, decoder_hidden)\n",
+        "        topv, topi = decoder_output.data.topk(beam_size)\n",
+        "        for i in beam_size:\n",
+        "            beams.append([])\n",
+        "\n",
+        "        for di in range(max_length):\n",
+        "            decoder_output, decoder_hidden = decoder(decoder_input, decoder_hidden)\n",
+        "            topv, topi = decoder_output.data.topk(beam_size)\n",
+        "            next_word = output_vocab.itos[topi.item()]\n",
+        "            decoded_words.append(next_word)\n",
+        "            if next_word == EOS_TOKEN:\n",
+        "                break\n",
+        "\n",
+        "            decoder_input = topi.squeeze().detach()\n",
+        "\n",
+        "        return decoded_words"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yRaOcsFV1bJN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# test\n",
+        "# paras\n",
+        "sentence = random.choice(data_train.examples).src\n",
+        "max_length=MAX_LEN\n",
+        "beam_size=3\n",
+        "\n",
+        "#code\n",
+        "input_tensor = torch.tensor([input_vocab.stoi[word] for word in sentence], device=mydevice)\n",
+        "input_length = input_tensor.size()[0]\n",
+        "encoder_hidden = encoder.initHidden()\n",
+        "\n",
+        "encoder_outputs = torch.zeros(max_length, encoder.hidden_size, device=mydevice)\n",
+        "\n",
+        "for ei in range(input_length):\n",
+        "    encoder_output, encoder_hidden = encoder(input_tensor[ei], encoder_hidden)\n",
+        "    encoder_outputs[ei] += encoder_output[0, 0]\n",
+        "\n",
+        "decoder_input = torch.tensor([[output_vocab.stoi[SOS_TOKEN]]], device=mydevice)\n",
+        "\n",
+        "decoder_hidden = encoder_hidden"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3sZieezY19ZL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 88
+        },
+        "outputId": "6f4c93fc-5db6-40de-a977-a59b651420ea"
+      },
+      "source": [
+        "beams = [] #first element is sequence, second is corresponding log likelihood.\n",
+        "\n",
+        "decoder_input = torch.tensor([[output_vocab.stoi[SOS_TOKEN]]], device=mydevice)\n",
+        "decoder_hidden = encoder_hidden\n",
+        "decoder_output, decoder_hidden = decoder(decoder_input, decoder_hidden)\n",
+        "topv, topi = decoder_output.data.topk(beam_size)\n",
+        "\n",
+        "for i in range(beam_size):\n",
+        "    beams.append([[topi[0][i]], topv[0][i].item()])\n",
+        "print(beams)\n",
+        "for di in range(max_length-1):\n",
+        "    candidates = []\n",
+        "    for ibeam in beams:\n",
+        "        #print(ibeam[0])\n",
+        "        decoder_input = ibeam[0][-1]\n",
+        "        if output_vocab.itos[decoder_input] == EOS_TOKEN:\n",
+        "            continue\n",
+        "        decoder_output, decoder_hidden = decoder(decoder_input, decoder_hidden)\n",
+        "        topv, topi = decoder_output.data.topk(beam_size)\n",
+        "        for i in range(beam_size):\n",
+        "            candidates.append([ibeam[0]+[topi[0][i]], ibeam[1]+topv[0][i].item()])\n",
+        "    if candidates:\n",
+        "        beams = sorted(candidates, key=lambda x:x[1], reverse=True)[:beam_size]\n",
+        "    #print(beams)\n",
+        "test = []\n",
+        "print(np.shape(beams))\n",
+        "for i in beams[0][0]:\n",
+        "    test.append(output_vocab.itos[i])\n",
+        "print(np.shape(test),test)\n",
+        "    # decoder_input = topi.squeeze().detach()"
+      ],
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[[tensor(4, device='cuda:0')], -5.14984130859375e-05], [[tensor(6, device='cuda:0')], -11.13761043548584], [[tensor(65, device='cuda:0')], -12.195701599121094]]\n",
+            "(3, 2)\n",
+            "(50,) ['<sos>', 'The', 'family', 'friendly', 'restaurant', 'with', 'a', 'price', 'range', 'of', '5', 'star', 'rating.', 'It', 'is', 'located', 'in', 'the', 'city', 'centre.', 'It', 'is', 'family', 'friendly', 'family', 'friendly', 'with', 'an', 'average', 'customer', 'rating.', 'It', 'has', 'an', 'average', 'customer', 'rating', 'is', 'average.', 'It', 'is', 'located', 'in', 'the', 'Café', 'Rouge.', 'It', 'is', 'located', '<eos>']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IRduecqde7xQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4b1cafb6-f5af-4865-9966-33dd0994f0f1"
+      },
+      "source": [
+        "beams = []\n",
+        "for i in range(beam_size):\n",
+        "    beams.append([topi[0][i].item(), topv[0][i].item()])\n",
+        "print(beams)"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[135, -0.7716608047485352], [6, -1.8260297775268555], [65, -2.626941680908203]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bX6YnWNdeTqh",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "758750d1-6b95-4dbb-f3b8-45fb04968ecd"
+      },
+      "source": [
+        "beams = sorted(beams, key=lambda x:x[0])[:2]\n",
+        "beams"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[6, -1.8260297775268555], [65, -2.626941680908203]]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "k08QgWsg19Vc",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for i in beam_size:\n",
+        "    beams.append()\n",
+        "\n",
+        "for di in range(max_length):\n",
+        "    decoder_output, decoder_hidden = decoder(decoder_input, decoder_hidden)\n",
+        "    topv, topi = decoder_output.data.topk(beam_size)\n",
+        "    next_word = output_vocab.itos[topi.item()]\n",
+        "    decoded_words.append(next_word)\n",
+        "    if next_word == EOS_TOKEN:\n",
+        "        break\n",
+        "\n",
+        "    decoder_input = topi.squeeze().detach()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vW-JpUn019Pg",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
