--- a/hw4/hw4/HW4_colab.ipynb
+++ b/hw4/hw4/HW4_colab.ipynb
@@ -895,32 +895,49 @@
         "        input_tensor = torch.tensor([input_vocab.stoi[word] for word in sentence], device=mydevice)\n",
         "        input_length = input_tensor.size()[0]\n",
         "        encoder_hidden = encoder.initHidden()\n",
-        "\n",
         "        encoder_outputs = torch.zeros(max_length, encoder.hidden_size, device=mydevice)\n",
-        "\n",
         "        for ei in range(input_length):\n",
         "            encoder_output, encoder_hidden = encoder(input_tensor[ei], encoder_hidden)\n",
         "            encoder_outputs[ei] += encoder_output[0, 0]\n",
         "\n",
         "        decoder_input = torch.tensor([[output_vocab.stoi[SOS_TOKEN]]], device=mydevice)\n",
-        "\n",
         "        decoder_hidden = encoder_hidden\n",
         "\n",
-        "        beams = [] #first element is sequence, second is corresponding log likelihood.\n",
+        "        # Above are the same with greedy evaluate.\n",
+        "####################################################################\n",
+        "        # Initialize the beams\n",
+        "        beams = [] #First element is sequence of tokens, second is corresponding log likelihood.\n",
         "        decoder_output, decoder_hidden = decoder(decoder_input, decoder_hidden)\n",
         "        topv, topi = decoder_output.data.topk(beam_size)\n",
         "        for i in beam_size:\n",
-        "            beams.append([])\n",
+        "            beams.append([[topi[0][i]], topv[0][i].item()])\n",
         "\n",
-        "        for di in range(max_length):\n",
-        "            decoder_output, decoder_hidden = decoder(decoder_input, decoder_hidden)\n",
-        "            topv, topi = decoder_output.data.topk(beam_size)\n",
-        "            next_word = output_vocab.itos[topi.item()]\n",
-        "            decoded_words.append(next_word)\n",
-        "            if next_word == EOS_TOKEN:\n",
-        "                break\n",
+        "        # Since above has run 1 decoder, here run max_length-1 times.\n",
+        "        for di in range(max_length-1):\n",
+        "            candidates = [] # Store k*k candidate seqs.\n",
+        "            for ibeam in beams:\n",
+        "                decoder_input = ibeam[0][-1] # Take last word in beam seq as input\n",
+        "                # If current beam has ended, continue\n",
+        "                if output_vocab.itos[decoder_input] == EOS_TOKEN:\n",
+        "                    candidates.append(ibeam)\n",
+        "                    continue \n",
+        "                decoder_output, decoder_hidden = decoder(decoder_input, decoder_hidden)\n",
+        "                topv, topi = decoder_output.data.topk(beam_size)\n",
+        "                # Add the new words to seqs\n",
+        "                for i in range(beam_size):\n",
+        "                    candidates.append([ibeam[0]+[topi[0][i]], ibeam[1]+topv[0][i].item()])\n",
+        "                    # Since the output of decoder is log likelihood, use summation.\n",
+        "            # Choose top k seqs according to length-normalized log-likelihood.\n",
+        "            if candidates:\n",
+        "                beams = sorted(candidates, key=lambda x:x[1]/len(x[0]), reverse=True)[:beam_size]\n",
         "\n",
-        "            decoder_input = topi.squeeze().detach()\n",
+        "        # Transform tokens into words:\n",
+        "        decoded_words = []\n",
+        "        for i in range(beam_size):\n",
+        "            tmp_words = []\n",
+        "            for j in beams[i][0]:\n",
+        "                tmp.append(output_vocab.itos[j])\n",
+        "            decoded_words.append(tmp_words)\n",
         "\n",
         "        return decoded_words"
       ],
@@ -966,9 +983,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 88
+          "height": 105
         },
-        "outputId": "6f4c93fc-5db6-40de-a977-a59b651420ea"
+        "outputId": "4d66fcad-1240-4978-c355-d7de591fb7b3"
       },
       "source": [
         "beams = [] #first element is sequence, second is corresponding log likelihood.\n",
@@ -984,32 +1001,68 @@
         "for di in range(max_length-1):\n",
         "    candidates = []\n",
         "    for ibeam in beams:\n",
-        "        #print(ibeam[0])\n",
         "        decoder_input = ibeam[0][-1]\n",
         "        if output_vocab.itos[decoder_input] == EOS_TOKEN:\n",
+        "            candidates.append(ibeam)\n",
         "            continue\n",
         "        decoder_output, decoder_hidden = decoder(decoder_input, decoder_hidden)\n",
         "        topv, topi = decoder_output.data.topk(beam_size)\n",
         "        for i in range(beam_size):\n",
         "            candidates.append([ibeam[0]+[topi[0][i]], ibeam[1]+topv[0][i].item()])\n",
         "    if candidates:\n",
-        "        beams = sorted(candidates, key=lambda x:x[1], reverse=True)[:beam_size]\n",
+        "        beams = sorted(candidates, key=lambda x:x[1]/len(x[0]), reverse=True)[:beam_size]\n",
         "    #print(beams)\n",
         "test = []\n",
-        "print(np.shape(beams))\n",
         "for i in beams[0][0]:\n",
+        "    test.append(output_vocab.itos[i])\n",
+        "print(np.shape(test),test)\n",
+        "test = []\n",
+        "for i in beams[1][0]:\n",
+        "    test.append(output_vocab.itos[i])\n",
+        "print(np.shape(test),test)\n",
+        "test = []\n",
+        "for i in beams[2][0]:\n",
         "    test.append(output_vocab.itos[i])\n",
         "print(np.shape(test),test)\n",
         "    # decoder_input = topi.squeeze().detach()"
       ],
-      "execution_count": 66,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[[[tensor(4, device='cuda:0')], -5.14984130859375e-05], [[tensor(6, device='cuda:0')], -11.13761043548584], [[tensor(65, device='cuda:0')], -12.195701599121094]]\n",
-            "(3, 2)\n",
-            "(50,) ['<sos>', 'The', 'family', 'friendly', 'restaurant', 'with', 'a', 'price', 'range', 'of', '5', 'star', 'rating.', 'It', 'is', 'located', 'in', 'the', 'city', 'centre.', 'It', 'is', 'family', 'friendly', 'family', 'friendly', 'with', 'an', 'average', 'customer', 'rating.', 'It', 'has', 'an', 'average', 'customer', 'rating', 'is', 'average.', 'It', 'is', 'located', 'in', 'the', 'Café', 'Rouge.', 'It', 'is', 'located', '<eos>']\n"
+            "[[[tensor(4, device='cuda:0')], -0.0002613067626953125], [[tensor(6, device='cuda:0')], -9.247732162475586], [[tensor(65, device='cuda:0')], -10.373465538024902]]\n",
+            "(13,) ['<sos>', 'The', 'Olive', 'Grove', 'in', 'the', 'city', 'centre', 'is', 'children', 'friendly', 'environment.', '<eos>']\n",
+            "(13,) ['<sos>', 'The', 'Olive', 'Grove', 'in', 'the', 'city', 'centre', 'is', 'children', 'friendly', 'environment', '<eos>']\n",
+            "(13,) ['<sos>', 'The', 'Olive', 'Grove', 'in', 'the', 'city', 'centre', 'is', 'children', 'friendly', 'atmosphere.', '<eos>']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6fSrQFK0D-m_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "246e73bc-3902-4667-cb5f-e9aa522c4c42"
+      },
+      "source": [
+        "for i in candidates:\n",
+        "    print(len(i[0]),i[1]/len(i[0]))"
+      ],
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "15 -0.8747999827067058\n",
+            "15 -0.8791011810302735\n",
+            "15 -0.9036996205647786\n"
           ],
           "name": "stdout"
         }
